--- a/02_calcularCubo.html
+++ b/02_calcularCubo.html
@@ -6,11 +6,16 @@
     */
 
     //Entrada
+    let numero = Number(prompt(`Informe um número inteiro`));
 
 
     //Processamento
+    function cubo(numero){
+        alert(`${numero**3}`)
+    }
 
 
     //Saída
+    cubo(numero)
 
 </script>
