--- a/03_conversaoFahrenheit.html
+++ b/03_conversaoFahrenheit.html
@@ -6,11 +6,16 @@
     */
 
     //Entrada
+    let c = Number(prompt(`Insira uma temperatura em Celsius`));
 
 
     //Processamento
+    function graus(c){
+        alert(`${(9 * c + 160) / 5} graus fahrenheit`)
+    }
 
 
     //Saída
+    graus(c)
 
 </script>
