--- a/04_conversaoCelsius.html
+++ b/04_conversaoCelsius.html
@@ -6,11 +6,16 @@
     */
 
     //Entrada
+    let f = Number(prompt(`Insira uma temperatura em fahrenheit`));
 
 
     //Processamento
+    function graus(f){
+        alert(`${(f - 32) * 5 / 9} graus Celsius`)
+    }
 
 
     //Saída
+    graus(f)
 
 </script>
