--- a/12_verificaParImpar.html
+++ b/12_verificaParImpar.html
@@ -5,11 +5,22 @@
     */
 
     //Entrada
+    let num = Number(prompt(`Informe um número`).replace(",", "."));
+
 
 
     //Processamento
+    function ParImpar(num){
+        if(num%2 == 0){
+            alert(`O número ${num} é par`);
+        }
+        else{
+            alert(`O número ${num} é ímpar`);
+        }
+    }
 
 
     //Saída
+    ParImpar(num)
 
 </script>
